--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <meta
+      property="og:description"
+      content="LFC chatbot made by Sammy-Jo Wymer"
+    />
+    <meta property="og:image" content="./lfc-thumbnail.jpeg" />
+    <meta property="og:url" content="https://chatlfc.netlify.app/" />
+    <title>Chat LFC</title>
   </head>
   <body>
     <div id="root"></div>
